changed colors and added some texts

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   --blue-color: #516e86;
   --darkblue-color: #858c8d;
   --darksand-color: #b9ac95;
+  --rosa-color: #ffefe6;
+  --grey-color: #f5f2f2;
 }
 
 * {
